# bstring

./: CMakeLists.txt
bstring/: CMakeLists.txt  bstrlib.h
cmake/toolchains/: Toolchain-Tasking-Tricore_v6.3r1.cmake
